tests/026_workers.ts.out
msg from js worker js worker init
msg from ts worker ts worker init
js worker received message: hello world
ReferenceError: DoesNotExist is not defined
    at onmessage ([WILDCARD]/tests/subdir/test_worker.js:10:5)
    at workerMain (gen/cli/bundle/main.js:[WILDCARD])
ts worker received message: hello world
Error: error from ts worker
    at onmessage ([WILDCARD]/tests/subdir/test_worker.ts:7:15)
    at workerMain (gen/cli/bundle/main.js:[WILDCARD])
msg from js worker js worker init
msg from ts worker ts worker init
error from js worker { message: "DoesNotExist is not defined" }
error from ts worker { message: "error from ts worker" }
js worker received message: hello js after timeout
end js worker
ts worker received message: hello ts after timeout
end ts worker